src/objects/Case_Record__c.object
<CustomObject>
    <fields>
        <fullName>Intake_Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intake Advocate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Records (Intake Advocate)</relationshipLabel>
        <relationshipName>Intake_Case_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intake_Date__c</fullName>
        <label>Intake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsAdult__c</fullName>
        <formula>if (Contact__r.Record_Type_Name__c = &apos;Client&apos;, True, False)</formula>
        <label>IsAdult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length_of_Stay_at_Previous_Place__c</fullName>
        <label>Length of Stay at Previous Place</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 days - 1 week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 week, less than 1 month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-3 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months - 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10+ years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Plate_Number__c</fullName>
        <description>Resident&apos;s license plate number</description>
        <inlineHelpText>Resident&apos;s license plate number</inlineHelpText>
        <label>License Plate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Likely_to_Show_Up_at_Child_s_School__c</fullName>
        <inlineHelpText>If yes, is he/she likely to show up at their school?</inlineHelpText>
        <label>Likely to Show Up at Child&apos;s School?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>List_Child_Immunizations_Needed__c</fullName>
        <label>List Child Immunizations Needed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_situation_AT_MOST_RECENT_INCIDENT__c</fullName>
        <label>Living situation AT MOST RECENT INCIDENT</label>
        <picklist>
            <picklistValues>
                <fullName>Alone or with Children Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Spouse (Legally Married)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Boyfriend/Girlfriend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Family/Other Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter/Safe Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Treatment Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Living_situation__c</fullName>
        <label>Living situation AT INTAKE</label>
        <picklist>
            <picklistValues>
                <fullName>Alone or with Children Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Spouse (Legally Married)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Boyfriend/Girlfriend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Family/Other Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living with Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter/Safe Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Treatment Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MH_diagnosis_MH_meds_situation__c</fullName>
        <description>Describe the participant&apos;s MH diagnosis, if applicable. List prescribed MH medications, and indicate whether the participant is taking them as prescribed.</description>
        <inlineHelpText>Describe the participant&apos;s MH diagnosis, if applicable. List prescribed MH medications, and indicate whether the participant is taking them as prescribed.</inlineHelpText>
        <label>MH diagnosis &amp; MH meds situation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medications_Allergic_to__c</fullName>
        <inlineHelpText>List names/types of medicines the resident is allergic to</inlineHelpText>
        <label>Medications Allergic to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Gross_Income_at_Intake__c</fullName>
        <label>Monthly Gross Income at Intake</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_income_AT_EXIT__c</fullName>
        <description>What is the participant&apos;s monthly income at exit?</description>
        <inlineHelpText>What is the participant&apos;s monthly income at exit?</inlineHelpText>
        <label>Monthly income AT EXIT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Bed_Night__c</fullName>
        <description>Date of most recent bed night for this case record.</description>
        <inlineHelpText>Date of most recent bed night for this case record.</inlineHelpText>
        <label>Most Recent Bed Night</label>
        <summarizedField>Bed_Night__c.Bednight_Date__c</summarizedField>
        <summaryForeignKey>Bed_Night__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Police_Sheriff_Helpful__c</fullName>
        <description>How would the Participant Describe the Most Recent Police/Sheriff Response?</description>
        <inlineHelpText>How would the Participant Describe the Most Recent Police/Sheriff Response?</inlineHelpText>
        <label>Most Recent Police/Sheriff Helpful?</label>
        <picklist>
            <picklistValues>
                <fullName>Very Helpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Unhelpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Helpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unhelpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neither Helpful nor Unhelpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown or Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_valuable_to_participant_at_shelter__c</fullName>
        <description>What was most valuable to the participant while at shelter?</description>
        <inlineHelpText>What was most valuable to the participant while at shelter?</inlineHelpText>
        <label>Most valuable to participant at shelter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>National_Origin__c</fullName>
        <formula>TEXT(Contact__r.National_Origin__c)</formula>
        <inlineHelpText>Participant national origin from contact record.</inlineHelpText>
        <label>National Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Medical_or_MH_Diagnosis_AT_EXIT__c</fullName>
        <description>Has the participant diagnosed since entering NB programs?</description>
        <inlineHelpText>Has the participant diagnosed since entering NB programs?</inlineHelpText>
        <label>New Medical or MH Diagnosis AT EXIT</label>
        <picklist>
            <picklistValues>
                <fullName>Physical disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf / Hard of Hearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind / Visually Impaired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug abuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dual diagnosis (MH &amp; CD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hidden Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chronic Health Condition</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>New_address_AT_EXIT__c</fullName>
        <description>Is the participant willing to share her new address with New Beginnings?</description>
        <inlineHelpText>Is the participant willing to share her new address with New Beginnings?</inlineHelpText>
        <label>New address AT EXIT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_knowledge_of_DV__c</fullName>
        <description>What has the participant learned about domestic violence since intake?</description>
        <inlineHelpText>What has the participant learned about domestic violence since intake?</inlineHelpText>
        <label>New knowledge of DV</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_knowledge_of_community_resources__c</fullName>
        <description>How has the participant&apos;s knowledge of community resources changed since entering shelter?</description>
        <inlineHelpText>How has the participant&apos;s knowledge of community resources changed since entering shelter?</inlineHelpText>
        <label>Familiarity with community resources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Cash_Benefits__c</fullName>
        <label>Non Cash Benefits</label>
        <picklist>
            <picklistValues>
                <fullName>Food stamps or Benefits Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDICAID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDICARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Children&apos;s Health Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA Medical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Health Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earned Income Tax Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TANF Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TANF Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other TANF-Funded services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary Rental Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section 8 or Rental Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Health Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Eligible for Mainstream Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refused</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Num_Individual_One_on_One_Advocacy__c</fullName>
        <description>Number of Individual One-on-One Advocacy participations.</description>
        <inlineHelpText>Number of Individual One-on-One Advocacy participations.</inlineHelpText>
        <label>Num Individual One-on-One Advocacy</label>
        <summaryFilterItems>
            <field>ServiceParticipation__c.Type__c</field>
            <operation>equals</operation>
            <value>Individual Advocacy</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceParticipation__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_at_Shelter__c</fullName>
        <formula>IF( !ISBLANK( Intake_Date__c )  &amp;&amp; !ISBLANK(  Exit_Date__c  ),  Exit_Date__c - Intake_Date__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days at Shelter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Outcomes_Met__c</fullName>
        <label>Number of Outcomes Met</label>
        <summaryFilterItems>
            <field>Outcome__c.Status__c</field>
            <operation>equals</operation>
            <value>Met</value>
        </summaryFilterItems>
        <summaryForeignKey>Outcome__c.Parent_Case_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_Homeless_in_Past_3_Years__c</fullName>
        <label>Number of Times Homeless in Past 3 Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OK_to_follow_up_with_participant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the participant willing to be contacted for follow-up by New Beginnings after exiting from NB programs?</description>
        <inlineHelpText>Is the participant willing to be contacted for follow-up by New Beginnings after exiting from NB programs?</inlineHelpText>
        <label>OK to follow up with participant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Amount__c</fullName>
        <label>Other Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Amt_at_EXIT__c</fullName>
        <label>Other Amt at EXIT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Children_s_Service_Needs__c</fullName>
        <description>What other services not already listed do(es) the child(ren) need?</description>
        <inlineHelpText>What other services not already listed do(es) the child(ren) need?</inlineHelpText>
        <label>Other Children&apos;s Service Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Important_Abuser_Info__c</fullName>
        <inlineHelpText>Enter other important information that does not fit in any of the other field categories.</inlineHelpText>
        <label>Other Important Abuser Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Participant_Service_Needs__c</fullName>
        <description>What other services not already listed does the participant need?</description>
        <inlineHelpText>What other services not already listed does the participant need?</inlineHelpText>
        <label>Other Participant Service Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Type_of_Disability__c</fullName>
        <formula>Contact__r.Other_Type_of_Disability__c</formula>
        <label>Other Type of Disability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Vehicle_Description__c</fullName>
        <description>Other details about the resident&apos;s vehicle</description>
        <inlineHelpText>Other details about the resident&apos;s vehicle</inlineHelpText>
        <label>Other Vehicle Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_comments_shelter_experience__c</fullName>
        <description>Does the participant have any other comments on her shelter experience that she would like to share?</description>
        <inlineHelpText>Does the participant have any other comments on her shelter experience that she would like to share?</inlineHelpText>
        <label>Other comments - shelter experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_income_source__c</fullName>
        <description>List the source(s) of participant&apos;s income not listed above, AT EXIT.</description>
        <inlineHelpText>List the source(s) of participant&apos;s income not listed above, AT EXIT.</inlineHelpText>
        <label>Other income source AT EXIT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_prevention_assistance__c</fullName>
        <description>List the other kind(s) of prevention assistance not listed above that the participant has received before exit.</description>
        <inlineHelpText>List the other kind(s) of prevention assistance not listed above that the participant has received before exit.</inlineHelpText>
        <label>Other prevention assistance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parenting_Group_Service_Hours__c</fullName>
        <label>Parenting Group Service Hours</label>
        <summarizedField>ServiceParticipation__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>ServiceParticipation__c.Type__c</field>
            <operation>equals</operation>
            <value>Parenting Group</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceParticipation__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parenting_Group_Services__c</fullName>
        <inlineHelpText>Number of parenting group Service Participations.</inlineHelpText>
        <label>Parenting Group Services</label>
        <summaryFilterItems>
            <field>ServiceParticipation__c.Type__c</field>
            <operation>equals</operation>
            <value>Parenting Group</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceParticipation__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parenting_Skills_Service_Hours__c</fullName>
        <label>Parenting Skills Service Hours</label>
        <summarizedField>ServiceParticipation__c.Hours__c</summarizedField>
        <summaryFilterItems>
            <field>ServiceParticipation__c.Type__c</field>
            <operation>equals</operation>
            <value>Parenting Skills</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceParticipation__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parenting_Skills_Services__c</fullName>
        <inlineHelpText>Number of Parenting Skills Service participations.</inlineHelpText>
        <label>Parenting Skills Services</label>
        <summaryFilterItems>
            <field>ServiceParticipation__c.Type__c</field>
            <operation>equals</operation>
            <value>Parenting Skills</value>
        </summaryFilterItems>
        <summaryForeignKey>ServiceParticipation__c.Case_Record__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Part_Reports_Situation_Improv_via_Prog__c</fullName>
        <inlineHelpText>Does the participant think their situation has improved as a result of using the Program?</inlineHelpText>
        <label>Part. Reports Situation Improv via Prog?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, they think their situation has improved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, they don&apos;t think their situation has improved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Particip_sought_court_order__c</fullName>
        <description>Has the Participant ever sought a Court Order due to Domestic Violence?</description>
        <inlineHelpText>Has the Participant ever sought a Court Order due to Domestic Violence?</inlineHelpText>
        <label>Participant sought court order ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_Id__c</fullName>
        <formula>Contact__r.Participant_Id__c</formula>
        <label>Participant Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_arrested_for_domestic_violen__c</fullName>
        <description>Has the Participant been arrested for a Domestic Violence Incident?</description>
        <inlineHelpText>Has the Participant been arrested for a Domestic Violence Incident?</inlineHelpText>
        <label>Particip. arrested for dom. violence?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknonwn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_narrative_since_intake__c</fullName>
        <description>Does the participant think her situation has improved since intake? In what ways has her situation improved or not improved?</description>
        <inlineHelpText>Does the participant think her situation has improved since intake? In what ways has her situation improved or not improved?</inlineHelpText>
        <label>Participant narrative since intake</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant_s_Service_Needs__c</fullName>
        <label>Participant’s Service Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Address Confidentiality Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Childcare/Respite Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culturally Appropriate Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug/Alcohol Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DV Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food/Clothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare/Medication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpreter Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Advocacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Participant Services Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent-Skill Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer Group Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Participant_s_future_plans__c</fullName>
        <description>What are the participant&apos;s plans for the future, now that she is leaving the shelter?</description>
        <inlineHelpText>What are the participant&apos;s plans for the future, now that she is leaving the shelter?</inlineHelpText>
        <label>Participant&apos;s future plans</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Participant_s_main_obstacle__c</fullName>
        <description>What has been the participant&apos;s main obstacle to improving her situation since intake?</description>
        <inlineHelpText>What has been the participant&apos;s main obstacle to improving her situation since intake?</inlineHelpText>
        <label>Participant&apos;s main obstacle</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Past_Sources_of_Income__c</fullName>
        <inlineHelpText>List sources of income that are not ongoing.  For example, if the participant was recieving TANF, but the last payment was last month and will not continue, do not list the amount of that source in the TANF field, but rather list it here.</inlineHelpText>
        <label>Past Sources of Income</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physically_abused_since_since_intake__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the participant been physically abused since entering the program?</description>
        <inlineHelpText>Has the participant been physically abused since entering the program?</inlineHelpText>
        <label>Physically abused since since intake?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Police_Dept_Sheriff_Office_Responded__c</fullName>
        <description>What Police Department or Sheriff’s Office Responded to the Most Recent Domestic Violence Incident?</description>
        <inlineHelpText>What Police Department or Sheriff’s Office Responded to the Most Recent Domestic Violence Incident?</inlineHelpText>
        <label>Police Dept./Sheriff Office Responded</label>
        <picklist>
            <picklistValues>
                <fullName>Seattle, North Precinct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Police or Sheriff Involvement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Abuser__c</fullName>
        <label>Primary Abuser</label>
        <picklist>
            <picklistValues>
                <fullName>(Step)/Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(Step)/Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boyfriend/Girlfriend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Boyfriend/Ex-Girlfriend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex-Spouse/Ex-Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Parent of Child(ren)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <formula>if (INCLUDES(Contact__r.Primary_Language__c, &quot;Amharic&quot;), &quot;Amharic&quot;+BR(),null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Arabic&quot;), &quot;Arabic&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Cantonese&quot;), &quot;Cantonese&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Farsi&quot;), &quot;Farsi&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Korean&quot;), &quot;Korean&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Laotian&quot;), &quot;Laotian&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Mandarin&quot;), &quot;Mandarin&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Oromo&quot;), &quot;Oromo&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Portuguese&quot;), &quot;Portuguese&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Punjabi&quot;), &quot;Punjabi&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Russian&quot;), &quot;Russian&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Somali&quot;), &quot;Somali&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Spanish&quot;), &quot;Spanish&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Tagalog&quot;), &quot;Tagalog&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Thai&quot;), &quot;Thai&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Tigrigna&quot;), &quot;Tigrigna&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Urdu&quot;), &quot;Urdu&quot;+BR(), null)+
if (INCLUDES(Contact__r.Primary_Language__c, &quot;Vietnamese&quot;), &quot;Vietnamese&quot;, null)</formula>
        <label>Primary Language</label>
        <type>Text</type>
    </fields>
</CustomObject>